{
    "name": "ShipControls",
    "maps": [
        {
            "name": "Default",
            "id": "65aed448-53c0-4fcc-8463-94098fb30d7c",
            "actions": [
                {
                    "name": "Steer",
                    "type": "Value",
                    "id": "1e5e1be1-b477-4e8d-8941-05f3017435e9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "09e13aca-87a8-448c-9744-988b638dfa54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootCannon",
                    "type": "Button",
                    "id": "70878c54-0739-49d5-82b3-3c285e79f7c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootLaser",
                    "type": "Button",
                    "id": "6d74831b-90a5-4ac4-8b04-e3ca6201679e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "92b2d586-f596-45c9-b6a1-c145ea4d7e7c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2c540b08-8e7a-4d62-9049-5d82a496c19d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "58d120b1-092f-4444-a075-441a8c7c1eb5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3a041b21-bba7-465c-a323-a3cb50830011",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootCannon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "315a2764-489a-4546-956a-ed564bf6d336",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b26ca66f-0c85-4eb8-ba5f-5355142f0ab3",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootLaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}